<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="za.co.dariel.washmycar.ui.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/choose_wash_type_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_wash_type"
            style="@style/AppTheme.Header"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/wash_type_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/outside_wash_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outside_only_wash"
            android:textSize="@dimen/radio_button_text_size"
            android:layout_marginBottom="@dimen/radio_button_margin_bottom"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/full_wash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_wash"
            android:textSize="@dimen/radio_button_text_size"
            android:layout_marginBottom="@dimen/radio_button_margin_bottom"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginRight="@dimen/button_spacing"

            />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"

            />
    </LinearLayout>

</LinearLayout>
